--- a/package.json
+++ b/package.json
@@ -5,10 +5,15 @@
   "license": "MIT",
   "devDependencies": {
     "@esbuild-kit/esm-loader": "^2.6.5",
+    "@types/fs-extra": "^11.0.4",
     "typescript": "^5.6.3"
   },
   "type": "module",
   "scripts": {
     "go": "NODE_NO_WARNINGS=1 node --loader @esbuild-kit/esm-loader"
+  },
+  "dependencies": {
+    "googleapis": "^144.0.0",
+    "pdf.js-extract": "^0.2.1"
   }
 }
